systemsettings runner: Ensure that we match keywords case insensitively

BUG: 451634